applications/xihe-test-v2/async-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: async-server-deployment
  namespace: xihe-test-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: async-server
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: async-server
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-async-server:v1.0.20230420194635
        imagePullPolicy: IfNotPresent
        name: async-server
        args:
        - --port=8080
        - --config-file=/opt/app/conf/config.yaml
        - --enable_debug=true
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
        volumeMounts:
        - mountPath: /opt/app/conf/config.yaml
          name: config
          subPath: config.yaml
      volumes:
      - name: config
        configMap:
          name: async-server-configmap
